# PiKtures

./: CMakeLists.txt  LICENSE  PiKtures.cpp  README.md
includes/: PiKturesConfig.hpp.in  command.hpp  detector.hpp  enhancer.hpp  rowdy.hpp  utility.hpp
modules/: CMakeLists.txt  command.cpp  detector.cpp  enhancer.cpp  rowdy.cpp  utility.cpp
tests/: CMakeLists.txt  command_test.cpp  detector_test.cpp  enhancer_test.cpp  rowdy_test.cpp
