cmake_minimum_required(VERSION 3.20)
project(PiKtures VERSION 1.0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
if(NOT DEFINED CMAKE_BUILD_TYPE)
set(CMAKE_BUILD_TYPE "Release")
endif()
if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
message("Debug build")
add_compile_options(-Wall -g)
elseif("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
message("Release build")
add_compile_options(-O3 -s)
else()
message("${CMAKE_BUILD_TYPE}")
endif()
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} includes)
add_subdirectory(modules)
add_subdirectory(tests)
add_executable(${PROJECT_NAME} PiKtures.cpp)
target_link_libraries(${PROJECT_NAME} rowdy)
