cmake_minimum_required(VERSION 3.20)
project(PiKtures VERSION 1.0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
option(BUILD_TESTS "Build unit testing sources" OFF)
find_package(OpenCV REQUIRED)
configure_file(includes/PiKturesConfig.hpp.in PiKturesConfig.hpp)
include_directories(${OpenCV_INCLUDE_DIRS} includes)
add_subdirectory(modules)
if(BUILD_TESTS)
    add_subdirectory(tests)
endif()
add_executable(${PROJECT_NAME} PiKtures.cpp)
target_link_libraries(${PROJECT_NAME} utility rowdy detector command enhancer)
target_include_directories(${PROJECT_NAME} PRIVATE "${PROJECT_BINARY_DIR}")
