cmake_minimum_required(VERSION 3.20)
add_library(utility utility.cpp)
target_link_libraries(utility ${OpenCV_LIBS})
add_library(rowdy rowdy.cpp)
target_link_libraries(rowdy ${OpenCV_LIBS} utility)
add_library(detector detector.cpp)
target_link_libraries(detector ${OpenCV_LIBS})
add_library(command command.cpp)
target_link_libraries(command ${OpenCV_LIBS} utility)
add_library(enhancer enhancer.cpp)
target_link_libraries(enhancer ${OpenCV_LIBS} utility)
